; ModuleID = '/home/carl/AnghaBench/wcdb/android/sqlcipher/extr_sqlite3.c_last_valueStepFunc.c'
source_filename = "/home/carl/AnghaBench/wcdb/android/sqlcipher/extr_sqlite3.c_last_valueStepFunc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.LastValueCtx = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32**)* @last_valueStepFunc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @last_valueStepFunc(i32* %0, i32 %1, i32** %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32**, align 8
  %7 = alloca %struct.LastValueCtx*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32** %2, i32*** %6, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @UNUSED_PARAMETER(i32 %8)
  %10 = load i32*, i32** %4, align 8
  %11 = call i64 @sqlite3_aggregate_context(i32* %10, i32 16)
  %12 = inttoptr i64 %11 to %struct.LastValueCtx*
  store %struct.LastValueCtx* %12, %struct.LastValueCtx** %7, align 8
  %13 = load %struct.LastValueCtx*, %struct.LastValueCtx** %7, align 8
  %14 = icmp ne %struct.LastValueCtx* %13, null
  br i1 %14, label %15, label %39

15:                                               ; preds = %3
  %16 = load %struct.LastValueCtx*, %struct.LastValueCtx** %7, align 8
  %17 = getelementptr inbounds %struct.LastValueCtx, %struct.LastValueCtx* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = call i32 @sqlite3_value_free(i64 %18)
  %20 = load i32**, i32*** %6, align 8
  %21 = getelementptr inbounds i32*, i32** %20, i64 0
  %22 = load i32*, i32** %21, align 8
  %23 = call i64 @sqlite3_value_dup(i32* %22)
  %24 = load %struct.LastValueCtx*, %struct.LastValueCtx** %7, align 8
  %25 = getelementptr inbounds %struct.LastValueCtx, %struct.LastValueCtx* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  %26 = load %struct.LastValueCtx*, %struct.LastValueCtx** %7, align 8
  %27 = getelementptr inbounds %struct.LastValueCtx, %struct.LastValueCtx* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = icmp eq i64 %28, 0
  br i1 %29, label %30, label %33

30:                                               ; preds = %15
  %31 = load i32*, i32** %4, align 8
  %32 = call i32 @sqlite3_result_error_nomem(i32* %31)
  br label %38

33:                                               ; preds = %15
  %34 = load %struct.LastValueCtx*, %struct.LastValueCtx** %7, align 8
  %35 = getelementptr inbounds %struct.LastValueCtx, %struct.LastValueCtx* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = add nsw i32 %36, 1
  store i32 %37, i32* %35, align 8
  br label %38

38:                                               ; preds = %33, %30
  br label %39

39:                                               ; preds = %38, %3
  ret void
}

declare dso_local i32 @UNUSED_PARAMETER(i32) #1

declare dso_local i64 @sqlite3_aggregate_context(i32*, i32) #1

declare dso_local i32 @sqlite3_value_free(i64) #1

declare dso_local i64 @sqlite3_value_dup(i32*) #1

declare dso_local i32 @sqlite3_result_error_nomem(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
